fixed gaping in the slider and sizing bug

--- a/src/css/slider.css
+++ b/src/css/slider.css
@@ -4,8 +4,9 @@
   margin: 50px auto;
   display: flex;
   align-items: center;
-  /* left: 50%;
-  transform: translateX(-50%); */
+  justify-content: center;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .slider {
@@ -13,6 +14,7 @@
   width: 100%;
   position: relative;
   margin: 0 auto;
+  max-width: 100%;
 }
 
 .slider-track {
@@ -23,7 +25,7 @@
 
 .slide {
   flex: 0 0 auto; /* Let the slide size itself based on content */
-  padding: 0 5px; /* Reduced padding for more space */
+  padding: 0 4px; /* Reduced padding for more space */
   box-sizing: border-box;
   width: 410px; /* Fixed width to accommodate 400px box + padding */
 }
